Big update with installer

--- a/.config/bspwm/configuration/ren01/config.ini
+++ b/.config/bspwm/configuration/ren01/config.ini
@@ -1,10 +1,10 @@
-  
 [global/wm]
 
 margin-bottom = 0
 margin-top = 0
 
-include-file = ~/.config/bspwm/configuration/ren01/poly/colors.ini
+               
+include-file = ../../configuration/ren01/poly/colors.ini
 include-file = ../../scripts/system.ini
 include-file = modules.ini
 
@@ -12,55 +12,36 @@ include-file = modules.ini
 [bar/ren01]
 
 monitor =
-monitor-fallback =
-monitor-strict = false
-
-override-redirect = false
-bottom = true
-fixed-center = false
 
 width = 100%
-height = 40
-
-offset-x = 0
-offset-y = 0
+height = 24pt
 
 background = ${ren.bg}
 foreground = ${ren.fg}
-radius = 0
 
-line-size = 2
-line-color = ${ren.bg}
+radius = 3
 
-border-size = 0
-border-color = ${ren.bg}
-padding-left = 3
-padding-right = 3
+line-size = 0pt
 
-module-margin-left = 0
-module-margin-right = 0
+border-size = 4pt
+border-bottom-size = 0
+
+padding-left = 2
+padding-right = 2
+
+module-margin = 2
 
 font-0 = "Inconsolata Semi Condensed Bold:size=11;2"
 font-1 = "Material Design Icons Desktop:size=16;4"
 font-2 = "Material Design Icons Desktop:size=12;3"
 font-3 = "Font Awesome 6 Free Solid:size=10;3"
 
-modules-left = launcher sep2 weather sep battery sep2 bspwm sep2 
+
+modules-left = launcher date bspwm 
 modules-center = title
-modules-right =  sep2 updates sep filesystem sep cpu_bar sep memory_bar sep pulseaudio sep network sep date
+modules-right = sep updates filesystem cpu_bar memory_bar pulseaudio network battery 
 
-separator = 
-dim-value = 1.0
-;locale = es_MX.UTF-8
-
-tray-position = right
-tray-detached = false
-tray-maxsize = 16
-tray-background = ${ren.bg}
-tray-offset-x = 0
-tray-offset-y = 0
-tray-padding = 0
-tray-scale = 1.0
+separator = |
 
 wm-restack = bspwm
 enable-ipc = true
