--- a/.config/bspwm/configuration/ren01/modules.ini
+++ b/.config/bspwm/configuration/ren01/modules.ini
@@ -5,13 +5,12 @@ interval = 1.0
 
 time = %I:%M %P
 format-foreground = ${ren.fg}
-date-alt = " %A, %d %B %Y"
 
 format = <label>
 format-prefix = ""
 format-prefix-foreground = ${ren.blue}
 
-label = %date% %time%
+label = %time%
 
 ######################################################
 
@@ -25,9 +24,11 @@ fixed-values = true
 
 format-mounted = <label-mounted>
 format-mounted-prefix = " "
+format-mounted-foreground = ${ren.cyan}
 
 format-unmounted = <label-unmounted>
 format-unmounted-prefix = " "
+format-unmounted-foreground = ${rem.red}
 
 label-mounted = "%used% "
 label-mounted-foreground = ${ren.grey}
@@ -84,23 +85,6 @@ ramp-volume-3 = 
 ramp-volume-4 = 
 
 click-right = OpenApps --soundcontrol
-
-######################################################
-
-[module/brightness]
-type = internal/backlight
-card = ${system.sys_graphics_card}
-
-enable-scroll = false
-
-format = <ramp> <label>
-label = "%percentage%% "
-label-foreground = ${ren.grey}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-font = 4
 
 ######################################################
 
@@ -195,10 +179,11 @@ format-prefix-font = 3
 format-prefix-foreground = ${ren.purple}
 
 label = %title%
+label-foreground = ${ren.white}
 label-maxlen = 35
 
 label-empty = "I use Arch Linux btw"
-label-empty-foreground = ${ren.grey}
+label-empty-foreground = ${ren.white}
 
 ######################################################
 
@@ -228,7 +213,7 @@ click-right = RiceSelector
 
 [module/sep]
 type = custom/text
-content = " "
+content = ""
 content-foreground = ${ren.bg-alt}
 
 ######################################################
@@ -261,33 +246,8 @@ interval = 3
 ;; agregar <bar-used> antes de label para agregar barrita chida
 format = <label>
 format-prefix = " "
+format-foreground = ${ren.amber}
 
 label = "%used% "
 label-foreground = ${ren.grey}
 
-######################################################
-
-[module/mpd_control]
-type            = internal/mpd
-host            = 127.0.0.1
-port            = 6600
-interval        = 2
-
-format-online   = <icon-prev><toggle><icon-next>
-format-offline  = <label-offline>
-label-offline = "󰝛 No Music"
-
-icon-play               = " %{T2}"
-icon-pause              = " %{T2}"
-icon-stop               = " %{T2}"
-icon-prev               = " %{T2}"
-icon-next               = " %{T2}"
-
-format-offline-foreground = ${ren.grey}
-icon-play-foreground    = ${ren.fg}
-icon-pause-foreground   = ${ren.fg}
-icon-stop-foreground    = ${ren.fg}
-icon-prev-foreground    = ${ren.fg}
-icon-next-foreground    = ${ren.fg}
-toggle-on-foreground    = ${ren.green}
-toggle-off-foreground   = ${ren.red}
