--- a/.config/bspwm/scripts/system.ini
+++ b/.config/bspwm/scripts/system.ini
@@ -6,7 +6,7 @@
 ;; Run `ip link | awk '/state UP/ {print $2}' | tr -d :` to get active network interface.
 
 [system]
-sys_adapter = ACAD
+sys_adapter = hidpp_battery_0
 sys_battery = BAT0
 sys_graphics_card = amdgpu_bl2
 sys_network_interface = wlan0
