--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
-gtk-theme-name=Nordic-darker
-gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Roboto Font Medium 11
+gtk-theme-name=Orchis-Dark
+gtk-icon-theme-name=Papirus
+gtk-font-name=JetBrainsMono Nerd Font Medium 11
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
