--- a/.config/nitrogen/bg-saved.cfg
+++ b/.config/nitrogen/bg-saved.cfg
@@ -1,4 +1,4 @@
 [xin_-1]
-file=/home/ren01/Pictures/Wallpapers/wires.jpg
+file=/home/ren01/.config/bspwm/configuration/ren01/walls/zim.png
 mode=1
 bgcolor=#000000
