--- a/.config/nitrogen/nitrogen.cfg
+++ b/.config/nitrogen/nitrogen.cfg
@@ -1,12 +1,12 @@
 [geometry]
-posx=90
-posy=15
-sizex=1815
-sizey=1050
+posx=15
+posy=47
+sizex=1890
+sizey=1018
 
 [nitrogen]
 view=list
 recurse=true
 sort=alpha
 icon_caps=false
-dirs=/home/ren01/Pictures/Wallpapers;
+dirs=/home/ren01/Pictures/Wallpapers;/home/ren01/.config/bspwm/configuration/ren01/walls;
